--- a/front/scss/style.scss
+++ b/front/scss/style.scss
@@ -23,6 +23,8 @@
 
     main {
       width: 95%;
+      background-image: url("../dot.svg");
+      background-repeat:repeat;
 
       .sleeve-storage{
         .sleeve-container {
@@ -30,6 +32,7 @@
           flex-flow: row wrap;
           border:#10a46e 3px solid;
           color:#d6df7e;
+          background-color: #feeff6;
           width: 250px;
           height: 60px;
           border-radius: 25px;
@@ -41,6 +44,8 @@
           -ms-user-select: none;
           user-select: none;
           cursor: grab;
+          opacity: 0.85;
+          transition: 0.1s;
 
           .content-container {
             width: 80%;
@@ -75,7 +80,47 @@
           }
           button{
             cursor: pointer;
+            background-color: #d6df7e;
+            color:#5a5dbc;
+            border:none;
+            border-radius: 25px;
+            font-size: 180%;
           }
+        }
+        .active.container{
+          margin-left: 1vw;
+          margin-top: 1vh;
+          .context-menu{
+            color:#5a5dbc;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            background-color: #feeff6;
+            border-radius: 7px 25px 15px 25px;
+            padding: 1vw 1vh;
+            
+            .tile{
+              transition: 0.1s;
+              width: 6vw;
+              height:2vh;
+              display: flex;
+              justify-content: center;
+              align-items: center;
+              padding: 2px;
+
+            }
+            .tile:hover{
+              transform: scale(115%, 115%);
+              background-color:#f8b7d5;
+              font-weight: 600;
+              border-radius: 10px 25px 15px 25px;
+              cursor: pointer;
+            }
+          }
+        }
+        .sleeve-container:hover{
+          opacity: 1;
         }
       }
     }
