--- a/front/css/style.css
+++ b/front/css/style.css
@@ -115,7 +115,7 @@
 #app .container-dashboard {
   width: 5%;
   height: 100vh;
-  outline: 1px #d582ae solid;
+  outline: 3px #d582ae solid;
   display: flex;
   flex-flow: column nowrap;
   justify-content: center;
@@ -139,7 +139,8 @@
   height: 100%;
   position: absolute;
   left: 80%;
-  outline: 1px #d582ae solid;
+  outline: 4px #d582ae solid;
+  background-color: #f8b7d5;
 }
 #app .dialog-container button, #app .dialog-container input[type=button] {
   cursor: pointer;
@@ -148,9 +149,53 @@
   width: 100%;
   height: 10%;
 }
+#app .dialog-container .dialog-header button {
+  width: 25%;
+  height: 25%;
+  background-color: #faa49a;
+  border-top: none;
+  border-left: none;
+  border-right: 3px #d582ae solid;
+  border-bottom: 3px #d582ae solid;
+  border-radius: 0px 0px 15px 0px;
+  color: #c4391d;
+  font-weight: 700;
+}
 #app .dialog-container .dialog-content {
   width: 100%;
   height: 80%;
+  color: #5a5dbc;
+}
+#app .dialog-container .dialog-content input[type=text], #app .dialog-container .dialog-content input[type=url] {
+  border: 0.23em #10a46e solid;
+  width: 18vw;
+  height: 3vh;
+  border-radius: 10px 25px 15px 25px;
+  background-color: #feeff6;
+  color: #5a5dbc;
+}
+#app .dialog-container .dialog-content form {
+  padding: 1vw;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  line-height: 2.5vh;
+}
+#app .dialog-container .dialog-content form label {
+  text-transform: capitalize;
+  font-weight: 600;
+}
+#app .dialog-container .dialog-content form #submit {
+  width: 9vw;
+  height: 3vh;
+  background-color: #d6df7e;
+  color: #10a46e;
+  text-transform: uppercase;
+  font-weight: 700;
+  border-radius: 25px;
+  border: none;
+  margin: 1em;
 }
 
 /*# sourceMappingURL=style.css.map */
