--- a/front/css/style.css
+++ b/front/css/style.css
@@ -122,7 +122,7 @@
   align-items: center;
 }
 #app .container-dashboard .tile {
-  outline: 1px #d582ae solid;
+  outline: 2px #d582ae solid;
   background-color: #feeff6;
   width: 5vw;
   height: 5vw;
@@ -140,7 +140,8 @@
   position: absolute;
   left: 80%;
   outline: 4px #d582ae solid;
-  background-color: #f8b7d5;
+  background-color: #feeff6;
+  overflow: hidden;
 }
 #app .dialog-container button, #app .dialog-container input[type=button] {
   cursor: pointer;
@@ -155,11 +156,12 @@
   background-color: #faa49a;
   border-top: none;
   border-left: none;
-  border-right: 3px #d582ae solid;
-  border-bottom: 3px #d582ae solid;
+  border-right: 1px #e9897e solid;
+  border-bottom: 1px #e9897e solid;
   border-radius: 0px 0px 15px 0px;
   color: #c4391d;
   font-weight: 700;
+  box-shadow: 1px 1px #e9897e;
 }
 #app .dialog-container .dialog-content {
   width: 100%;
@@ -171,7 +173,7 @@
   width: 18vw;
   height: 3vh;
   border-radius: 10px 25px 15px 25px;
-  background-color: #feeff6;
+  background-color: #e0eaff;
   color: #5a5dbc;
 }
 #app .dialog-container .dialog-content form {
@@ -196,6 +198,9 @@
   border-radius: 25px;
   border: none;
   margin: 1em;
+  border-right: #10a46e 1px solid;
+  border-bottom: #10a46e 1px solid;
+  box-shadow: 1px 1px;
 }
 
 /*# sourceMappingURL=style.css.map */
