--- a/front/css/style.css
+++ b/front/css/style.css
@@ -202,5 +202,35 @@
   border-bottom: #10a46e 1px solid;
   box-shadow: 1px 1px;
 }
+#app .dialog-container .dialog-content .theme-select, #app .dialog-container .dialog-content .locale-select {
+  width: 100%;
+  height: 3em;
+  padding: 0.2em;
+}
+#app .dialog-container .dialog-content .theme-select select, #app .dialog-container .dialog-content .locale-select select {
+  border-radius: 25px;
+  width: 11vw;
+  height: 3vh;
+  margin-left: 0.5em;
+  background-color: #e0eaff;
+  border-radius: 10px 25px 15px 25px;
+  border: 0.2em #10a46e solid;
+  color: #5a5dbc;
+  font-weight: 600;
+  padding: 0.2em;
+}
+#app .dialog-container .dialog-content .theme-select button, #app .dialog-container .dialog-content .locale-select button {
+  width: 5vw;
+  height: 2.5vh;
+  border-radius: 17px;
+  margin-left: 0.7em;
+  background-color: #f8b7d5;
+  border-right: #d582ae 1px solid;
+  border-bottom: #d582ae 1px solid;
+  box-shadow: 1px 1px;
+  border: none;
+  color: #dd4b9b;
+  font-weight: 600;
+}
 
 /*# sourceMappingURL=style.css.map */
