--- a/front/scss/style.scss
+++ b/front/scss/style.scss
@@ -223,6 +223,39 @@
             box-shadow: 1px 1px;
           }
         }
+
+        .theme-select, .locale-select{
+          width: 100%;
+          height: 3em;
+          padding: 0.2em;
+
+          select{
+            border-radius: 25px;
+            width: 11vw;
+            height:3vh;
+            margin-left: 0.5em;
+            background-color:#e0eaff;
+            border-radius:10px 25px 15px 25px;
+            border:0.2em #10a46e solid;
+            color:#5a5dbc;
+            font-weight: 600;
+            padding: 0.2em;
+          }
+
+          button{
+            width: 5vw;
+            height:2.5vh;
+            border-radius: 17px;
+            margin-left: 0.7em;
+            background-color:#f8b7d5;
+            border-right: #d582ae 1px solid;
+            border-bottom: #d582ae 1px solid;
+            box-shadow: 1px 1px;
+            border:none;
+            color:#dd4b9b;
+            font-weight: 600;
+          }
+        }
       }
     }
 }
