variables and new theme

--- a/front/scss/style-midnight.scss
+++ b/front/scss/style-midnight.scss
@@ -10,17 +10,17 @@
 }
 
 //variables
-$text-color-blue:#5a5dbc;
+$text-color-blue:#ffb2f7;
 
-$input-background-color-light-blue:#e0eaff;
+$input-background-color-light-blue:#e8d9ed;
 
-$dark-green:#10a46e;
-$lime-green:#d6df7e;
+$dark-green:#426bc2;
+$lime-green:#0b1957;
 
-$very-light-pink:#feeff6;
-$light-pink:#f8b7d5;
-$mid-pink-color:#d582ae;
-$text-color-hottest-pink:#dd4b9b;
+$very-light-pink:#36337e;
+$light-pink:#88a2ff;
+$mid-pink-color:#222023;
+$text-color-hottest-pink:#f7f4ed;
 
 * {
   margin: 0;
