--- a/front/css/style.css
+++ b/front/css/style.css
@@ -47,6 +47,7 @@
 #app main .sleeve-storage .sleeve-container .content-container {
   width: 80%;
   height: 100%;
+  text-overflow: ellipsis;
 }
 #app main .sleeve-storage .sleeve-container .content-container p {
   background-color: #10a46e;
@@ -59,13 +60,13 @@
 #app main .sleeve-storage .sleeve-container .content-container a {
   all: unset;
   color: #d582ae;
+  width: 90%;
   font-size: 1.5vmin;
-  max-width: 50px;
-  width: 50px;
   overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
   padding-left: 0.5vmin;
+  display: inline-block;
 }
 #app main .sleeve-storage .sleeve-container .content-container a:hover {
   color: #dd4b9b;
@@ -78,10 +79,6 @@
   border: none;
   border-radius: 25px;
   font-size: 180%;
-}
-#app main .sleeve-storage .active.container {
-  margin-left: 1vw;
-  margin-top: 1vh;
 }
 #app main .sleeve-storage .active.container .context-menu {
   color: #5a5dbc;
@@ -130,7 +127,7 @@
   align-items: center;
   justify-content: center;
   text-transform: uppercase;
-  font-family: "Sniglet";
+  font-family: "Sniglet", sans-serif;
   font-weight: 600;
   color: #5a5dbc;
 }
@@ -157,7 +154,7 @@
   border-left: none;
   border-right: 3px #d582ae solid;
   border-bottom: 3px #d582ae solid;
-  border-radius: 0px 0px 15px 0px;
+  border-radius: 0 0 15px 0;
   color: #c4391d;
   font-weight: 700;
 }
