--- a/front/scss/style.scss
+++ b/front/scss/style.scss
@@ -274,6 +274,84 @@ $text-color-hottest-pink:#dd4b9b;
             font-weight: 600;
           }
         }
+
+        .switch{
+          display: flex;
+          align-items:center;
+          justify-content: space-evenly;
+          flex-direction: row;
+          width:8em;
+          height:2.3em;
+          background-color: $lime-green;
+          border-radius:30px;
+          margin-left: 1em;
+          font-size: 0.8em;
+          .form-switch{
+            width:4em;
+            height: 2.3em;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            transition: 0.3s ease;
+
+            &.selected{
+              background-color: #ccd75f;
+              width:4em;
+              font-size: 1.1em;
+              transition: 0.3s ease;
+            }
+            &.left-rounded {
+              border-radius: 30px 0 0 30px;
+            }
+            &.right-rounded {
+              border-radius: 0 30px 30px 0;
+            }
+          }
+        }
+        .forms-container{
+          .formkit-inner, .formkit-outer{
+            border: 0;
+            outline:none;
+            box-shadow: none;
+          }
+          .formkit-input{
+            border: $text-color-hottest-pink 1px solid;
+            border-radius: 25px;
+            max-width: 20em;
+            width:15em;
+            height: 2em;
+            background-color: $input-background-color-light-blue;
+            outline: none;
+            box-shadow: none;
+          }
+          .formkit-input:focus{
+            border:$text-color-hottest-pink 2px solid;
+            transition: 0.1s;
+          }
+          input[type="checkbox"]{
+            height: 1em;
+            width: 1em;
+          }
+          input[type="checkbox"]:checked{
+
+          }
+          button[type="submit"]{
+            background-color: $mid-pink-color;
+            width:10em;
+            height:2.5em;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            font-weight: 600;
+            border: $text-color-hottest-pink 2px solid;
+          }
+
+          $text-color-red:#c4391d;
+          .formkit-message{
+            color:$text-color-red;
+            font-weight: 500;
+          }
+        }
       }
     }
 }
