--- a/front/css/style.css
+++ b/front/css/style.css
@@ -13,9 +13,6 @@
 #app {
   display: flex;
   flex-flow: wrap row;
-  /* 3 marca */
-  /* 10 */
-  /* 31 */
   overflow: hidden;
   font-family: "Josefin Sans", sans-serif;
 }
@@ -35,10 +32,6 @@
   border-radius: 25px;
   padding: 0.5vmin;
   align-items: center;
-  -webkit-touch-callout: none;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
   user-select: none;
   cursor: grab;
   opacity: 0.85;
@@ -154,11 +147,10 @@
   width: 25%;
   height: 25%;
   background-color: #faa49a;
-  border-top: none;
-  border-left: none;
+  border: none;
   border-right: 1px #e9897e solid;
   border-bottom: 1px #e9897e solid;
-  border-radius: 0px 0px 15px 0px;
+  border-radius: 0 0 15px 0;
   color: #c4391d;
   font-weight: 700;
   box-shadow: 1px 1px #e9897e;
@@ -225,10 +217,8 @@
   border-radius: 17px;
   margin-left: 0.7em;
   background-color: #f8b7d5;
-  border-right: #d582ae 1px solid;
-  border-bottom: #d582ae 1px solid;
-  box-shadow: 1px 1px;
   border: none;
+  box-shadow: 1px 1px;
   color: #dd4b9b;
   font-weight: 600;
 }
@@ -254,9 +244,7 @@
 }
 #app .dialog-container .dialog-content .switch .form-switch.selected {
   background-color: #ccd75f;
-  width: 4em;
   font-size: 1.1em;
-  transition: 0.3s ease;
 }
 #app .dialog-container .dialog-content .switch .form-switch.left-rounded {
   border-radius: 30px 0 0 30px;
@@ -276,8 +264,6 @@
   width: 15em;
   height: 2em;
   background-color: #e0eaff;
-  outline: none;
-  box-shadow: none;
 }
 #app .dialog-container .dialog-content .forms-container .formkit-input:focus {
   border: #dd4b9b 2px solid;
