--- a/front/css/style-midnight.css
+++ b/front/css/style-midnight.css
@@ -60,10 +60,14 @@ body {
   font-size: 1.5vmin;
   max-width: 50px;
   width: 50px;
-  overflow: hidden;
-  white-space: nowrap;
-  text-overflow: ellipsis;
-  padding-left: 0.5vmin;
+  word-break: break-word;
+  white-space: normal;
+}
+#app main .sleeve-storage .sleeve-container .content-container .tag {
+  border-radius: 50%;
+  background-color: #8f6fff;
+  width: 1vw;
+  height: 1vh;
 }
 #app main .sleeve-storage .sleeve-container .content-container a:hover {
   color: #a891ff;
@@ -164,6 +168,11 @@ body {
   width: 100%;
   height: 80%;
   color: #c9ccff;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  margin-left: 10px;
 }
 #app .dialog-container .dialog-content input[type=text], #app .dialog-container .dialog-content input[type=url] {
   border: 0.23em #6c4ab6 solid;
